--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <div id="overlay"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="/images/icons/icon-192x192.png" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="theme-color" content="#0f0f0f" />
+        <meta name="description" content="Urdu news & newspapers" />
+        <meta property="og:url" content="https://urdunews.herokuapp.com" />
+        <meta property="og:title" content="Urdu News - Coded By Shah Fahad" />
+        <meta
+            property="og:description"
+            content="Urdu News, Newspapers & Magazines"
+        />
+        <meta property="og:image" content="/images/og-img.jpg" />
+        <link rel="apple-touch-icon" href="/images/icons/icon-192x192.png" />
+        <link rel="manifest" href="/manifest.json" />
+        <title>Urdu News</title>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+        <div id="overlay"></div>
+
+        <script>
+            /*
+            "serviceWorker" in navigator &&
+                window.addEventListener("load", function () {
+                    navigator.serviceWorker.register("/sw.js").then(
+                        function (e) {
+                            console.log(
+                                "ServiceWorker registration successfull"
+                            );
+                        },
+                        function (e) {
+                            console.log("ServiceWorker registration failed");
+                        }
+                    );
+                });
+                */
+        </script>
+    </body>
 </html>
 
 <!-- ********************************
