--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <div id="root"></div>
         <div id="overlay"></div>
 
-        <script>
+        <script type="text/javascript">
             "serviceWorker" in navigator &&
                 window.addEventListener("load", function () {
                     navigator.serviceWorker.register("n/sw.js").then(
