--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <script type="text/javascript">
             "serviceWorker" in navigator &&
                 window.addEventListener("load", function () {
-                    navigator.serviceWorker.register("n/sw.js").then(
+                    navigator.serviceWorker.register("/sw.js").then(
                         function (e) {
                             console.log(
                                 "ServiceWorker registration successfull"
